# Automous-Robot-and-AI-Platform

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
docker/: Dockerfile
docs/: developement.md  project_details.md
models/: model-gen.py
src/detector_pkg/: CMakeLists.txt  package.xml
src/detector_pkg/include/detector_pkg/: detector_node.hpp
src/detector_pkg/models/: model.py
src/detector_pkg/src/: detector_node.cpp  main.cpp  onnx_test.cpp
